--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,30 @@
     box-sizing: border-box;
     font-family: "Lato", sans-serif;
 }
+
+/* regole barra superiore */
+header {
+    width: 100%;
+    height: 70px;
+    background-color: black;
+    padding-top: 3px;
+}
+
+.container {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    gap: 5px;
+    font-size: small;
+}
+
+.container a {
+    text-decoration: none;
+    color: white;
+}
+
+.label {
+    background-color: rgb(97, 96, 96);
+    padding: 2px 3px;
+    border-radius: 5px;
+}
