--- a/css/style.css
+++ b/css/style.css
@@ -75,9 +75,17 @@ header {
 /* parte centrale barra inferiore */
 .menu {
     width: 60%;
-    min-height: 100%;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
+#green {
+    color: rgb(41, 241, 41);
+}
 
 /* parte destra barra inferiore */
 .end-call {
