--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@ header {
     height: 70px;
     background-color: black;
     padding-top: 3px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 900;
 }
 
 .container {
