--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ a {
 header {
     width: 100%;
     height: 70px;
-    background-color: black;
+    background-color: rgb(34, 34, 34);
     padding-top: 3px;
     position: fixed;
     top: 0;
@@ -37,7 +37,46 @@ header {
 }
 
 
+/* regole parte centrale */
+.container-main {
+    width: 100%;
+    background-color: black;
+    /* DEBUG */
+    min-height: calc(100vh - 80px);
+    padding-top: 130px;
+}
 
+.people-space {
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+
+.user {
+    width: 14%;
+    margin-bottom: 10px;
+    position: relative;
+}
+
+.user img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.name {
+    font-size: 10px;
+    color: white;
+    background-color: rgba(71, 71, 71, 0.3);
+    padding: 2px 3px;
+    position: absolute;
+    bottom: 8px;
+    left: 0;
+    z-index: 500;
+}
 
 /* regole barra inferiore */
 .container-bottom {
